Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121131

QML - Text - Font weight - macOS/Windows difference - episode 2

XMLWordPrintable

    • Windows
    • cba15d99f (dev), 1593b1f6d (dev), a8c93149a (dev)

      Problem description
      The same code produces different results : 
      Windows (incorrect behaviour) : 

      The above behaviour is reproducible both with Qt 6.6.1 and 6.7.0 Beta1 versions.

      macOS (expected behaviour) : 

      Please notice in the above screenshot that the Windows build does not show the chinese traditional characters as bold.

      Steps to reproduce : 
      Open the attached project and run it : ChinesTraditionalBoldFontTest1.zip

        1. ChinesTraditionalBoldFontTest1.zip
          2 kB
          Csaba Szigeti
        2. ChinesTraditionalBoldFontTest2.zip
          15.33 MB
          Csaba Szigeti
        3. screenshot-1.png
          70 kB
          Eskil Abrahamsen Blomfeldt
        4. Screenshot 2024-01-16 at 15.10.34.png
          457 kB
          Csaba Szigeti
        5. Screenshot 2024-01-16 at 15.17.43.png
          494 kB
          Csaba Szigeti
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            csnt Csaba Szigeti
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes